added a new title

--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -6,8 +6,7 @@
     <title></title>
 </head>
 <body>
-    <h1>sdsf</h1>
-    <h2>josh</h2>
+    <h1>chesters frights hotel</h1>    
     
 
 </body>
