--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -7,6 +7,13 @@
     <title></title>
 </head>
 <body>
+    <ul>
+        <li><item>Home</item></li>
+        <li><item>Home</item></li>
+        <li><item>Home</item></li>
+
+
+    </ul>
     <h1>chesters frights hotel</h1>    
     
 
