testing left class

--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><item>Home</item></li>
+        <li class= "left">Home</li>
         <li><item>Home</item></li>
         <li><item>Home</item></li>
 
