added a right class

--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -9,8 +9,8 @@
 <body>
     <ul>
         <li class= "left"><item>home</item></li>
-        <li><item>Home</item></li>
-        <li><item>Home</item></li>
+        <li class= "right"><item>Home</item></li>
+        <li class= "right"><item>Home</item></li>
 
 
     </ul>
