fixed display issues

--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -10,7 +10,7 @@
     <ul>
         <li class= "left"><item>home</item></li>
         <li class= "right"><item>Home</item></li>
-        <li class= "right"><item>Home</item></li>
+        <li><item>Home</item></li>
 
 
     </ul>
