adding java script functions

--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel ="stylesheet" href="StyleSheet2.css" />
+    <script src="JavaScript1.js"></script>
     <title></title>
 </head>
 <body>
@@ -14,7 +15,9 @@
 
 
     </ul>
-    <h1>chesters frights hotel</h1>    
+    <h1>chesters frights hotel</h1>   
+    
+    <img src="" id="image" />   
     
 
 </body>
