--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -16,7 +16,9 @@
     </ul>
     <h1>chesters frights hotel</h1>
 
-    <img src="" id="image" />
+    <img src="" id="image">
+
+    img<src ="hue2.jpg">
 
     <script src="JavaScript1.js"></script>
 
