--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -18,7 +18,7 @@
 
     <img src="" id="image">
 
-    img<src ="hue2.jpg">
+    <img src ="Asissgment1/hue2.jpg">
 
     <script src="JavaScript1.js"></script>
 
