added text div to the gallery sections aswell as white pace between items in my websites home page to make it look poffesional

--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -7,20 +7,59 @@
     <title></title>
 </head>
 <body>
-    <ul>
-        <li class="left"><item>home</item></li>
-        <li class="right"><item>Home</item></li>
-        <li><item>Home</item></li>
+    <div class="encapsulordiv">
+        <ul>
+            <li class="left"><item>home</item></li>
+            <li class="right"><item>Home</item></li>
+            <li><item>Home</item></li>
 
 
-    </ul>
-    <h1>chesters frights hotel</h1>
+        </ul>
+        <h1>chesters frights hotel</h1>
 
-    <img src="" id="image">
+        <div class="randomimgdiv">
 
-    <img src ="hue2.jpg">
+            <img src="" id="image">
+        </div>
+        <h2> gallery</h2>
+        <div class="contaierdiv ">
+            <div class="gallerydivparent">
+                <div class="gallerydiv">
+                    <img src="hue2.jpg">
 
-    <script src="JavaScript1.js"></script>
+                </div>
+                <div class="textdiv">
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="gallerydivparent">
+                <div class="gallerydiv">
+                    <img src="hue2.jpg">
+
+                </div>
+                <div class="textdiv">
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="gallerydivparent">
+                <div class="gallerydiv">
+                    <img src="hue2.jpg">
+
+                </div>
+                <div class="textdiv">
+                    <p></p>
+                </div>
+            </div>
+        </div>
+
+        <p>lorem  ienfffffffffffffffffffffff</p>
+        <p>ssssssss</p>
+
+
+        <script src="JavaScript1.js"></script>
+    </div>
 
 </body>
 </html>
