--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -7,59 +7,66 @@
     <title></title>
 </head>
 <body>
+    
+    <ul>
+        <li class="left"><item><img src="hue2.jpg"></item></li>
+        <li class="right"><item>Home</item></li>
+        <li><item>Home</item></li>
+        <li><item>Home</item></li>
+
+
+    </ul>
     <div class="encapsulordiv">
-        <ul>
-            <li class="left"><item>home</item></li>
-            <li class="right"><item>Home</item></li>
-            <li><item>Home</item></li>
-
-
-        </ul>
         <h1>chesters frights hotel</h1>
 
         <div class="randomimgdiv">
 
             <img src="" id="image">
         </div>
-        <h2> gallery</h2>
-        <div class="contaierdiv ">
-            <div class="gallerydivparent">
-                <div class="gallerydiv">
-                    <img src="hue2.jpg">
+        <div class="contaierdiv "></div>
 
+            <h2> gallery</h2>
+            <div class="contaierdiv ">
+                <div class="gallerydivparent">
+                    <div class="gallerydiv">
+                        <img src="hue2.jpg">
+
+                    </div>
+
+                    <div class="textdiv">
+                        <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
+                    </div>
                 </div>
-                <div class="textdiv">
-                    <p></p>
+
+                <div class="gallerydivparent">
+                    <div class="gallerydiv">
+                        <img src="hue2.jpg">
+
+                    </div>
+                    <div class="textdiv">
+                        <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
+                    </div>
+                </div>
+
+                <div class="gallerydivparent">
+                    <div class="gallerydiv">
+                        <img src="hue2.jpg">
+
+                    </div>
+                    <div class="textdiv">
+                        <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="gallerydivparent">
-                <div class="gallerydiv">
-                    <img src="hue2.jpg">
+            <p>lorem  ienfffffffffffffffffffffff</p>
+            <p>ssssssss</p>
 
-                </div>
-                <div class="textdiv">
-                    <p></p>
-                </div>
-            </div>
 
-            <div class="gallerydivparent">
-                <div class="gallerydiv">
-                    <img src="hue2.jpg">
-
-                </div>
-                <div class="textdiv">
-                    <p></p>
-                </div>
-            </div>
+            <script src="JavaScript1.js"></script>
         </div>
-
-        <p>lorem  ienfffffffffffffffffffffff</p>
-        <p>ssssssss</p>
-
-
-        <script src="JavaScript1.js"></script>
-    </div>
-
+        <div class="bottomdiv">
+            <img src="bottom_banner.jpg">
+        </div>
 </body>
 </html>
