added a map api

--- a/Asissgment1/HtmlPage2.html
+++ b/Asissgment1/HtmlPage2.html
@@ -10,12 +10,19 @@
 
     <ul>
         <li class="left"><item><img src="hue2.jpg"></item></li>
-        <li class="right"><item>Home</item></li>
-        <li><item>Home</item></li>
+        <li class="right"><item><a href="HTMLPage1.html">Home</a></item></li>
+        <li><item><a href="#">Home</a></item></li>
         <li><item>Home</item></li>
 
 
     </ul>
+
+    <section>
+        <div class="bottomdiv">
+            
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.8764146720405!2d-2.700322024524454!3d53.32756607228384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ae2dd5210777f%3A0x43a4e06029a19d8c!2sRuncorn%20Shopping%20City!5e0!3m2!1sen!2suk!4v1769429707810!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
 
 </body>
 </html>
