--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -10,8 +10,8 @@
     
     <ul>
         <li class="left"><item><img src="hue2.jpg"></item></li>
-        <li class="right"><item>Home</item></li>
-        <li><item>Home</item></li>
+        <li class="right"><item><a href="#">Home</a></item></li>
+        <li><item><a href="htmlPage2.html">Home</a></item></li>
         <li><item>Home</item></li>
 
 
