added dividers and made the navigation look nicer

--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -11,7 +11,7 @@
 
 
         <ul>
-            <li class="left"><item><img src="hue2.jpg"></item></li>
+            <li class="left"><item><img src="logo.png"></item></li>
             <li class="right"><item><a href="#">Home</a></item></li>
             <li><item><a href="htmlPage2.html">Home</a></item></li>
             <li><item>Home</item></li>
@@ -30,11 +30,10 @@
         </div>
 
 
-
+        <hr class="dashedbottom" />
     </div>
-    
     <div class="imgback2">
-        <img src="divider.png" />
+        <hr class="dashed" />
         <div class="encapsulordiv">
             <h2> gallery</h2>
             <div class="contaierdiv ">
@@ -69,10 +68,13 @@
                     </div>
                 </div>
             </div>
+            <hr class="dashedbottom" />
         </div>
         <script src="JavaScript1.js"></script>
 
         <div class="bottomdiv">
+            <hr class="dashed" />
+
             <img src="bottom_banner.png">
         </div>
     </div>
