--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -12,9 +12,9 @@
 
         <ul>
             <li class="left"><item><img src="logo.png"></item></li>
-            <li class="right"><item><a href="#">Home</a></item></li>
-            <li><item><a href="htmlPage2.html">Home</a></item></li>
-            <li><item>Home</item></li>
+            <li class="right"><item><button class="navbutton" onclick=#">Home</button></item></li>
+            <li><item><button class="navbutton" onclick="window.location.href='htmlPage2.html'">about</button></item></li>
+            <li><item><button class="navbutton" onclick="window.location.href='htmlPage2.html'">contact</button></item></li>
 
 
         </ul>
@@ -39,7 +39,7 @@
             <div class="contaierdiv ">
                 <div class="gallerydivparent">
                     <div class="gallerydiv">
-                        <img src="hue2.jpg">
+                        <img src="kitchen.png">
 
                     </div>
 
@@ -50,7 +50,7 @@
 
                 <div class="gallerydivparent">
                     <div class="gallerydiv">
-                        <img src="hue2.jpg">
+                        <img src="bedroom.png">
 
                     </div>
                     <div class="textdiv">
@@ -60,7 +60,7 @@
 
                 <div class="gallerydivparent">
                     <div class="gallerydiv">
-                        <img src="hue2.jpg">
+                        <img src="livingroom.png">
 
                     </div>
                     <div class="textdiv">
