fully start work on second sheet

--- a/Asissgment1/HtmlPage2.html
+++ b/Asissgment1/HtmlPage2.html
@@ -4,20 +4,33 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="StyleSheet2.css" />
+    <link rel="stylesheet" href="StyleSheet3.css" />
     <title></title>
 </head>
 <body>
-
-    <ul>
-        <li class="left"><item><img src="hue2.jpg"></item></li>
-        <li class="right"><item><a href="HTMLPage1.html">Home</a></item></li>
-        <li><item><a href="#">Home</a></item></li>
-        <li><item>Home</item></li>
+    <div class="imgback">
 
 
-    </ul>
+        <ul>
+            <li class="left"><item><img src="logo.png"></item></li>
+            <li class="right"><item><button class="navbutton" onclick="window.location.href='htmlPage1.html'">Home</button></item></li>
+            <li><item><button class="navbutton" onclick=#>about</button></item></li>
+            <li><item><button class="navbutton" onclick="window.location.href='htmlPage2.html'">contact</button></item></li>
 
-    <div class="encapsulordiv">
+
+        </ul>
+
+
+
+
+        <h1>Information page</h1>
+
+
+
+
+
+        
+        <hr class="dashedbottom" />
     </div>
 <bottom>
 
