--- a/Asissgment1/HtmlPage2.html
+++ b/Asissgment1/HtmlPage2.html
@@ -27,6 +27,7 @@
 
 
         <div class="containerbox1">
+            <h2 class="texttitle">The kitchen</h2>
             <div class="textbox1">
                 <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
                 <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
@@ -43,22 +44,62 @@
     </div>
     <hr class="dashed" />
 
-    <div class="containerbox1">
-        <div class="textbox1">
+    <div class="containerbox2">
+        <h2 class="texttitle">The bedroom</h2>
+
+        <div class="textbox2">
             <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
             <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
             <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
 
 
         </div>
-        <div class="imgbox1"><img src="kitchen.png"></div>
-
+        <div class="imgbox2"><img src="bedroom.png"></div>
     </div>
+    <hr class="dashedbottom" />
+
+    <div class="imgback3">
+        <hr class="dashed" />
 
 
-    <section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.8764146720405!2d-2.700322024524454!3d53.32756607228384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ae2dd5210777f%3A0x43a4e06029a19d8c!2sRuncorn%20Shopping%20City!5e0!3m2!1sen!2suk!4v1769429707810!5m2!1sen!2suk" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
+        <div class="containerbox1">
+
+            <h2 class="texttitle">The livingroom</h2>
+            <div class="textbox1">
+                <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
+                <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
+                <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
+
+
+            </div>
+            <div class="imgbox1"><img src="livingroom.png"></div>
+
+        </div>
+    </div>
+    <hr class="dashedbottom"/>
+    <div class="containerbox2">
+        <hr class="dashed" />
+        <h2 class="texttitle">What to do</h2>
+
+        <div class="textbox2">
+            <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
+            <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
+            <p>Sense child do state to defer mr of forty. Become latter but nor abroad wisdom waited. Was delivered gentleman acuteness but daughters. In as of whole as match asked. Pleasure exertion put add entrance distance drawings. In equally matters showing greatly it as. Want name any wise are able park when. Saw vicinity judgment remember finished men throwing.</p>
+
+
+        </div>
+        <div class="imgbox2"><img src="snowmobo.png"></div>
+    </div>
+    <hr class="dashedbottom" />
+
+    <div class="imgback3"> </div>
+
+
+
+
+        <section>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.8764146720405!2d-2.700322024524454!3d53.32756607228384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ae2dd5210777f%3A0x43a4e06029a19d8c!2sRuncorn%20Shopping%20City!5e0!3m2!1sen!2suk!4v1769429707810!5m2!1sen!2suk" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
 
 </body>
 
