--- a/Asissgment1/HTMLPage1.html
+++ b/Asissgment1/HTMLPage1.html
@@ -12,9 +12,9 @@
 
         <ul>
             <li class="left"><item><img src="logo.png"></item></li>
-            <li class="right"><item><button class="navbutton" onclick=#">Home</button></item></li>
+            <li class="right"><item><button class="navbutton" onclick=#>Home</button></item></li>
             <li><item><button class="navbutton" onclick="window.location.href='htmlPage2.html'">about</button></item></li>
-            <li><item><button class="navbutton" onclick="window.location.href='htmlPage2.html'">contact</button></item></li>
+            <li><item><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></item></li>
 
 
         </ul>
