--- a/Asissgment1/HtmlPage2.html
+++ b/Asissgment1/HtmlPage2.html
@@ -15,7 +15,7 @@
             <li class="left"><item><img src="logo.png"></item></li>
             <li class="right"><item><button class="navbutton" onclick="window.location.href='htmlPage1.html'">Home</button></item></li>
             <li><item><button class="navbutton" onclick=#>about</button></item></li>
-            <li><item><button class="navbutton" onclick="window.location.href='htmlPage2.html'">contact</button></item></li>
+            <li><item><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></item></li>
 
 
         </ul>
