more progress on the form

--- a/Asissgment1/contactpage.html
+++ b/Asissgment1/contactpage.html
@@ -19,9 +19,12 @@
 
 
         </ul>
-    <form>
-        <input type="text" value="name" />
-    </form>
+        <form>
+            <input type="text" value="name" />
+            <br />
+            <input type="text" value="second" />
+
+        </form>
 <</div>
 
 
