big progress on form

--- a/Asissgment1/contactpage.html
+++ b/Asissgment1/contactpage.html
@@ -19,12 +19,23 @@
 
 
         </ul>
-        <form>
-            <input type="text" value="name" />
-            <br />
-            <input type="text" value="second" />
+    <br />
+    <form>
+        <input type="text" value="name" />
+        <br />
+        <input type="text" value="second" />
+        <br />
+        <input type="text" value="email" />
+        <br />
+        <input type="date" />
+        <br />
+        <textarea class="asks" name="headsup" cols="38" , rows="7"></textarea>
+        <br />
+        <input type="submit" value="send messege" />
+        <img src="logo.png" alt="Alternate Text" />
 
-        </form>
+
+    </form>
 <</div>
 
 
