Messing around with different layouts

--- a/Asissgment1/contactpage.html
+++ b/Asissgment1/contactpage.html
@@ -20,23 +20,25 @@
 
         </ul>
     <br />
-    <form>
-        <input type="text" value="name" />
-        <br />
-        <input type="text" value="second" />
-        <br />
-        <input type="text" value="email" />
-        <br />
-        <input type="date" />
-        <br />
-        <textarea class="asks" name="headsup" cols="38" , rows="7"></textarea>
-        <br />
-        <input type="submit" value="send messege" />
-        <img src="logo.png" alt="Alternate Text" />
+    <div class="containerboxforms">
+        <form>
+            <input type="text" value="name" />
+            <br />
+            <input type="text" value="second" />
+            <br />
+            <input type="text" value="email" />
+            <br />
+            <input type="date" />
+            <br />
+            <textarea class="asks" name="headsup" cols="38" , rows="7"></textarea>
+            <br />
+            <input type="submit" value="send messege" />
+            <img src="logo.png" alt="Alternate Text" />
 
 
-    </form>
-<</div>
+        </form>
+    </div>
+</div>
 
 
 </body>
