finished mobile freidnly

--- a/Asissgment1/contactpage.html
+++ b/Asissgment1/contactpage.html
@@ -38,7 +38,9 @@
 
         </form>
 
-        <div class="test"></div>
+        <div class="test">
+            <p>joshua</p>
+        </div>
     </div>
 </div>
 
