file names changed

--- a/Asissgment1/contactpage.html
+++ b/Asissgment1/contactpage.html
@@ -13,8 +13,8 @@
 
         <ul>
             <li class="left"><item><img src="logo.png"></item></li>
-            <li class="right"><item><button class="navbutton" onclick="window.location.href='htmlPage1.html'">Home</button></item></li>
-            <li><item><button class="navbutton" onclick="window.location.href='htmlPage2.html'">about</button></item></li>
+            <li class="right"><item><button class="navbutton" onclick="window.location.href='home.html'">Home</button></item></li>
+            <li><item><button class="navbutton" onclick="window.location.href='about.html'">about</button></item></li>
             <li><item><button class="navbutton" onclick=#>contact</button></item></li>
 
 
