--- a/Asissgment1/about.html
+++ b/Asissgment1/about.html
@@ -13,7 +13,7 @@
 
         <ul>
             <li class="left"><item><img src="logo.png"></item></li>
-            <li class="right"><item><button class="navbutton" onclick="window.location.href='htmlPage1.html'">Home</button></item></li>
+            <li class="right"><item><button class="navbutton" onclick="window.location.href='home.html'">Home</button></item></li>
             <li><item><button class="navbutton" onclick=#>about</button></item></li>
             <li><item><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></item></li>
 
