--- a/Asissgment1/home.html
+++ b/Asissgment1/home.html
@@ -13,7 +13,7 @@
         <ul>
             <li class="left"><item><img src="logo.png"></item></li>
             <li class="right"><item><button class="navbutton" onclick=#>Home</button></item></li>
-            <li><item><button class="navbutton" onclick="window.location.href='htmlPage2.html'">about</button></item></li>
+            <li><item><button class="navbutton" onclick="window.location.href='about.html'">about</button></item></li>
             <li><item><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></item></li>
 
 
