--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
         <ul>
             <li class="left"><item><img src="logo.png"></item></li>
             <li class="right"><item><button class="navbutton" onclick=#>Home</button></item></li>
-            <li><item><button class="navbutton" onclick="window.location.href='about.html'">about</button></item></li>
-            <li><item><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></item></li>
+            <li><item><a href="about.html">about</a></item></li>
+            <li><item><a href="contactpage.html"></a></item></li>
 
 
         </ul>
