changed some names

--- a/homepage.html
+++ b/homepage.html
@@ -13,13 +13,13 @@
         <ul>
             <li class="left"><item><img src="logo.png"></item></li>
             <li class="right"><item><button class="navbutton" onclick=#>Home</button></item></li>
-            <li><item><button class="navbutton" onclick="window.location.href='aboutpage.html'">about</button></item></li>
-            <li><item><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></item></li>
+            <li><item><a href="about.html">about</a></item></li>
+            <li><item><a href="contactpage.html"></a></item></li>
 
 
         </ul>
 
-        <p></p>
+
 
 
         <h1>landfall wonderland air b&b</h1>
