--- a/aboutpage.html
+++ b/aboutpage.html
@@ -13,9 +13,10 @@
 
         <ul>
             <li class="left"><item><img src="logo.png"></item></li>
-            <li class="right"><item><button class="navbutton" onclick="window.location.href='homepage.html'">Home</button></item></li>
+            <li class="right"><item><button class="navbutton" onclick="window.location.href='home.html'">Home</button></item></li>
             <li><item><button class="navbutton" onclick=#>about</button></item></li>
             <li><item><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></item></li>
+
 
         </ul>
 
