--- a/homepage.html
+++ b/homepage.html
@@ -26,7 +26,7 @@
 
 
         <div class="randomimgdiv">
-            <img src="" id="image">
+            <img src="" id="image" alt="A collection of images within a snowey envrioment">
         </div>
 
 
@@ -39,7 +39,7 @@
             <div class="contaierdiv ">
                 <div class="gallerydivparent">
                     <div class="gallerydiv">
-                        <img src="kitchen.png">
+                        <img src="kitchen.png" alt="An image of a kitchen with an oven, fridge and window overlooking a frozen river">
 
                     </div>
 
