--- a/homepage.html
+++ b/homepage.html
@@ -50,7 +50,7 @@
 
                 <div class="gallerydivparent">
                     <div class="gallerydiv">
-                        <img src="bedroom.png">
+                        <img src="bedroom.png" alt="An image of a bedroom with a double bed, a T.V. a night stand and a window over looking the same lake">
 
                     </div>
                     <div class="textdiv">
@@ -60,7 +60,7 @@
 
                 <div class="gallerydivparent">
                     <div class="gallerydiv">
-                        <img src="livingroom.png">
+                        <img src="livingroom.png" alt="An image of a living rooms with two sofas, a T.V. a window overlooking a waterfall and the northern lights">
 
                     </div>
                     <div class="textdiv">
@@ -75,7 +75,7 @@
         <div class="bottomdiv">
             <hr class="dashed" />
 
-            <img src="bottom_banner.png">
+            <img src="bottom_banner.png" alt="the main lobby of the air b&b">
         </div>
     </div>
 </body>
