--- a/aboutpage.html
+++ b/aboutpage.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="StyleSheet2.css" />
     <link rel="stylesheet" href="StyleSheet3.css" />
-    <title></title>
+    <title>Landfall air b&b about</title>
 </head>
 <body>
     <div class="imgback">
@@ -35,7 +35,7 @@
 
 
             </div>
-            <div class="imgbox1"><img src="kitchen.png"></div>
+            <div class="imgbox1"><img src="kitchen.png" alt="An image of a kitchen with an oven, fridge and window overlooking a frozen river"></div>
 
         </div>
 
@@ -54,7 +54,7 @@
 
 
         </div>
-        <div class="imgbox2"><img src="bedroom.png"></div>
+        <div class="imgbox2"><img src="bedroom.png" alt="An image of a bedroom with a double bed, a T.V. a night stand and a window over looking the same lake"></div>
     </div>
     <hr class="dashedbottom" />
 
@@ -72,7 +72,7 @@
 
 
             </div>
-            <div class="imgbox1"><img src="livingroom.png"></div>
+            <div class="imgbox1"><img src="livingroom.png"  alt="An image of a living rooms with two sofas, a T.V. a window overlooking a waterfall and the northern lights"></div>
 
         </div>
     </div>
@@ -88,7 +88,7 @@
 
 
         </div>
-        <div class="imgbox2"><img src="snowmobo.png"></div>
+        <div class="imgbox2"><img src="snowmobo.png" alt="A couple enjoying their time doing different activites located around the local area that the air b&b is located"></div>
     </div>
     <hr class="dashedbottom" />
 
