--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel ="stylesheet" href="StyleSheet2.css" />
-    <title></title>
+    <title>Landfall air b&b home</title>
 </head>
 <body>
     <div class="imgback">
