--- a/contactpage.html
+++ b/contactpage.html
@@ -12,7 +12,7 @@
 
 
         <ul>
-            <li class="left"><item><img src="logo.png"></item></li>
+            <li class="left"><item><img src="logo.png" alt="Our logo"></item></li>
             <li class="right"><item><button class="navbutton" onclick="window.location.href='homepage.html'">Home</button></item></li>
             <li><item><button class="navbutton" onclick="window.location.href='aboutpage.html'">about</button></item></li>
             <li><item><button class="navbutton" onclick=#>contact</button></item></li>
@@ -32,7 +32,7 @@
             <textarea class="asks" name="headsup" cols="38" , rows="7"></textarea>
             <br />
             <input type="submit" value="send messege" />
-            <img src="logo.png" alt="Alternate Text" />
+            <img src="logo.png" alt="Our logo" />
 
 
         </form>
