contact form changes

--- a/contactpage.html
+++ b/contactpage.html
@@ -19,25 +19,32 @@
 
 
         </ul>
-    <br />
-        <form>
-            <input type="text" value="name" />
-            <br />
-            <input type="text" value="second" />
-            <br />
-            <input type="text" value="email" />
-            <br />
-            <input type="date" />
-            <br />
-            <textarea class="asks" name="headsup" cols="38" , rows="7"></textarea>
-            <br />
-            <input type="submit" value="send messege" />
-            <img src="logo.png" alt="Our logo" />
+        <br />
+        <div class="contactdiv">
+            <form>
+                <label>First name</label>
+                <input type="text" value="name" />
+                <br />
+                <label>Second name</label>
+                <input type="text" value="second" />
+                <br />
+                <label>Email</label>
+                <input type="text" value="email" />
+                <br />
+                <label>time of arrival</label>
+                <input type="date" />
+                <br />
+                <label>extra info</label>
+                <textarea class="asks" name="headsup" cols="38" , rows="18"></textarea>
+                <br />
+                <input type="submit" value="send messege" />
+                
 
 
-        </form>
-        
-</div>
+            </form>
+        </div>
+
+    </div>
 
 
 </body>
