--- a/aboutpage.html
+++ b/aboutpage.html
@@ -12,10 +12,10 @@
 
 
         <ul>
-            <li class="left"><item><img src="logo.png" alt="Our logo"></item></li>
-            <li class="right"><item><button class="navbutton" onclick="window.location.href='homepage.html'">Home</button></item></li>
+            <li class="left"><img src="logo.png" alt="Our logo"></li>
+            <li class="right"><button class="navbutton" onclick="window.location.href='homepage.html'">Home</button></li>
             <li><item><button class="navbutton" onclick=#>about</button></item></li>
-            <li><item><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></item></li>
+            <li><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></li>
 
 
         </ul>
