--- a/contactpage.html
+++ b/contactpage.html
@@ -42,11 +42,15 @@
 
 
             </form>
-           <div class="rdiv">
-                   <section>
-                       <iframe class="lil" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.8764146720405!2d-2.700322024524454!3d53.32756607228384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ae2dd5210777f%3A0x43a4e06029a19d8c!2sRuncorn%20Shopping%20City!5e0!3m2!1sen!2suk!4v1769429707810!5m2!1sen!2suk" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                   </section>
-           </div>
+            <div class="rdiv">
+                <div class="textforcon"><p>email@gmail.com</p></div>
+                <div class="textforcon"><p>2343567241</p></div>
+
+
+                <section>
+                    <iframe class="lil" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.8764146720405!2d-2.700322024524454!3d53.32756607228384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ae2dd5210777f%3A0x43a4e06029a19d8c!2sRuncorn%20Shopping%20City!5e0!3m2!1sen!2suk!4v1769429707810!5m2!1sen!2suk" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </section>
+            </div>
         </div>
 
     </div>
