--- a/aboutpage.html
+++ b/aboutpage.html
@@ -12,7 +12,7 @@
 
 
         <ul>
-            <li class="left"><img src="logo.png" alt="Our logo"></li>
+            <li class="left"><img src="images/logo.png" alt="Our logo"></li>
             <li class="right"><button class="navbutton" onclick="window.location.href='homepage.html'">Home</button></li>
             <li><item><button class="navbutton" onclick=#>about</button></item></li>
             <li><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></li>
@@ -35,7 +35,7 @@
 
             </div>
 
-            <div class="imgbox1"><img src="kitchen.png" alt="An image of a kitchen with an oven, fridge and window overlooking a frozen river"></div>
+            <div class="imgbox1"><img src="images/kitchen.png" alt="An image of a kitchen with an oven, fridge and window overlooking a frozen river"></div>
 
         </div>
         <hr class="dashedbottom" />
@@ -53,7 +53,7 @@
 
 
         </div>
-        <div class="imgbox1"><img src="bedroom.png" alt="An image of a bedroom with a double bed, a T.V. a night stand and a window over looking the same lake"></div>
+        <div class="imgbox1"><img src="images/bedroom.png" alt="An image of a bedroom with a double bed, a T.V. a night stand and a window over looking the same lake"></div>
     </div>
     <hr class="dashedbottom" />
 
@@ -71,7 +71,7 @@
 
 
             </div>
-            <div class="imgbox1"><img src="livingroom.png" alt="An image of a living rooms with two sofas, a T.V. a window overlooking a waterfall and the northern lights"></div>
+            <div class="imgbox1"><img src="images/livingroom.png" alt="An image of a living rooms with two sofas, a T.V. a window overlooking a waterfall and the northern lights"></div>
 
         </div>
     </div>
@@ -88,7 +88,7 @@
 
 
         </div>
-        <div class="imgbox1"><img src="snowmobo.png" alt="A couple enjoying their time doing different activites located around the local area that the air b&b is located"></div>
+        <div class="imgbox1"><img src="images/snowmobo.png" alt="A couple enjoying their time doing different activites located around the local area that the air b&b is located"></div>
     </div>
     <hr class="dashedbottom" />
 
