--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
 
 
         <ul>
-            <li class="left"><item><img src="logo.png" alt="Our logo"></item></li>
+            <li class="left"><item><img src="images/logo.png" alt="Our logo"></item></li>
             <li class="right"><item><button class="navbutton" onclick=#>Home</button></item></li>
             <li><item><button class="navbutton" onclick="window.location.href='aboutpage.html'">about</button></item></li>
             <li><item><button class="navbutton" onclick="window.location.href='contactpage.html'">contact</button></item></li>
@@ -39,7 +39,7 @@
             <div class="contaierdiv ">
                 <div class="gallerydivparent">
                     <div class="gallerydiv">
-                        <img src="kitchen.png" alt="An image of a kitchen with an oven, fridge and window overlooking a frozen river">
+                        <img src="images/kitchen.png" alt="An image of a kitchen with an oven, fridge and window overlooking a frozen river">
 
                     </div>
 
@@ -50,7 +50,7 @@
 
                 <div class="gallerydivparent">
                     <div class="gallerydiv">
-                        <img src="bedroom.png" alt="An image of a bedroom with a double bed, a T.V. a night stand and a window over looking the same lake">
+                        <img src="images/bedroom.png" alt="An image of a bedroom with a double bed, a T.V. a night stand and a window over looking the same lake">
 
                     </div>
                     <div class="textdiv">
@@ -60,7 +60,7 @@
 
                 <div class="gallerydivparent">
                     <div class="gallerydiv">
-                        <img src="livingroom.png" alt="An image of a living rooms with two sofas, a T.V. a window overlooking a waterfall and the northern lights">
+                        <img src="images/livingroom.png" alt="An image of a living rooms with two sofas, a T.V. a window overlooking a waterfall and the northern lights">
 
                     </div>
                     <div class="textdiv">
@@ -75,7 +75,7 @@
         <div class="bottomdiv">
             <hr class="dashed" />
 
-            <img src="bottom_banner.png" alt="the main lobby of the air b&b">
+            <img src="images/bottom_banner.png" alt="the main lobby of the air b&b">
         </div>
     </div>
 </body>
