--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link rel ="stylesheet" href="StyleSheet2.css"/>
+    <link rel ="stylesheet" href="root/StyleSheet2.css"/>
     <title>Landfall air b&b home</title>
 </head>
 <body>
@@ -70,7 +70,7 @@
             </div>
             <hr class="dashedbottom" />
         </div>
-        <script src="JavaScript1.js"></script>
+        <script src="root/JavaScript1.js"></script>
 
         <div class="bottomdiv">
             <hr class="dashed" />
