--- a/aboutpage.html
+++ b/aboutpage.html
@@ -3,8 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="StyleSheet2.css" />
-    <link rel="stylesheet" href="StyleSheet3.css" />
+    <link rel="stylesheet" href="root/StyleSheet2.css" />
+    <link rel="stylesheet" href="root/StyleSheet3.css" />
     <title>Landfall air b&b about</title>
 </head>
 <body>
